--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -2,19 +2,24 @@ server {
        listen 80;
        listen [::]:80;
 
-       server_name example.ubuntu.com;
+       server_name 0.0.0.0;
         
        #access_log /home/box/web/etc/nginx-access.log
 
        location ^~ /uploads/ {
-                root /home/box/web;
+            root /home/box/web;
        }
 
        location ~* ^.+\.\w+$ {
-                root /home/box/web/public;
+            root /home/box/web/public;
        }
 
-       location / {
-                return 404;
+       location /hello/ {
+            return 404;
        }
+       
+       location / {
+            include proxy_params;
+            proxy_pass http://unix:/run/gunicorn.sock;
+    }
 }
