--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,25 +1,35 @@
-server {
-       listen 80;
-       listen [::]:80;
+upstream app_servers {
 
-       server_name 0.0.0.0;
-        
-       #access_log /home/box/web/etc/nginx-access.log
+        server 127.0.0.1:8080;
+        # server 127.0.0.1:8081;
+        # ..
+        # .
 
-       location ^~ /uploads/ {
-            root /home/box/web;
-       }
-
-       location ~* ^.+\.\w+$ {
-            root /home/box/web/public;
-       }
-
-       location /hello/ {
-            return 404;
-       }
-       
-       location / {
-            include proxy_params;
-            proxy_pass http://unix:/run/gunicorn.sock;
     }
+
+server {
+        listen 80;
+        listen [::]:80;
+
+        server_name 0.0.0.0;
+        
+        #access_log /home/box/web/etc/nginx-access.log
+
+        location ^~ /uploads/ {
+            root /home/box/web;
+        }
+
+        location ~* ^.+\.\w+$ {
+            root /home/box/web/public;
+        }
+
+        location /hello/ {
+            proxy_pass http://127.0.0.1:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+       
+        location / {
+            return 404;
+        }
 }
