--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,17 +1,8 @@
-upstream app_servers {
-
-        server 127.0.0.1:8080;
-        # server 127.0.0.1:8081;
-        # ..
-        # .
-
-    }
-
 server {
         listen 80;
         listen [::]:80;
 
-        server_name 0.0.0.0;
+        server_name example.org;
         
         #access_log /home/box/web/etc/nginx-access.log
 
