--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,4 +1,15 @@
-server {
+user www-data; 
+worker_processes 4; 
+pid /run/nginx.pid; 
+
+events {
+       worker_connections 768;
+}
+
+http{
+
+    server {
+
         listen 80;
         listen [::]:80;
 
@@ -15,7 +26,7 @@ server {
         }
 
         location /hello/ {
-            proxy_pass http://127.0.0.1:8080;
+            proxy_pass http://0.0.0.0:8080;
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
@@ -23,4 +34,5 @@ server {
         location / {
             return 404;
         }
+    }
 }
