--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -17,13 +17,13 @@ http{
         
         #access_log /home/box/web/etc/nginx-access.log
 
-        location ^~ /uploads/ {
-            root /home/box/web;
-        }
+        #location ^~ /uploads/ {
+        #    root /home/box/web;
+        #}
 
-        location ~* ^.+\.\w+$ {
-            root /home/box/web/public;
-        }
+        #location ~* ^.+\.\w+$ {
+        #    root /home/box/web/public;
+        #}
 
         location /hello/ {
             proxy_pass http://0.0.0.0:8080;
@@ -32,7 +32,9 @@ http{
         }
        
         location / {
-            return 404;
+            proxy_pass http://0.0.0.0:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
     }
 }
