--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,112 +1,95 @@
 user www-data;
-worker_processes auto;
+worker_processes 4;
 pid /run/nginx.pid;
-include /etc/nginx/modules-enabled/*.conf;
 
 events {
-    worker_connections 768;
-    # multi_accept on;
+	worker_connections 768;
+	# multi_accept on;
 }
 
 http {
 
-    ##
-    # Basic Settings
-    ##
+	##
+	# Basic Settings
+	##
 
-    sendfile on;
-    tcp_nopush on;
-    tcp_nodelay on;
-    keepalive_timeout 65;
-    types_hash_max_size 2048;
-    # server_tokens off;
+	sendfile on;
+	tcp_nopush on;
+	tcp_nodelay on;
+	keepalive_timeout 65;
+	types_hash_max_size 2048;
+	# server_tokens off;
 
-    # server_names_hash_bucket_size 64;
-    # server_name_in_redirect off;
+	# server_names_hash_bucket_size 64;
+	# server_name_in_redirect off;
 
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
+	include /etc/nginx/mime.types;
+	default_type application/octet-stream;
 
-    ##
-    # SSL Settings
-    ##
+	##
+	# Logging Settings
+	##
 
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3; # Dropping SSLv3, ref: POODLE
-    ssl_prefer_server_ciphers on;
+	access_log /var/log/nginx/access.log;
+	error_log /var/log/nginx/error.log;
 
-    ##
-    # Logging Settings
-    ##
+	##
+	# Gzip Settings
+	##
 
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
+	gzip on;
+	gzip_disable "msie6";
 
-    ##
-    # Gzip Settings
-    ##
+	# gzip_vary on;
+	# gzip_proxied any;
+	# gzip_comp_level 6;
+	# gzip_buffers 16 8k;
+	# gzip_http_version 1.1;
+	# gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
-    gzip on;
+	##
+	# nginx-naxsi config
+	##
+	# Uncomment it if you installed nginx-naxsi
+	##
 
-    # gzip_vary on;
-    # gzip_proxied any;
-    # gzip_comp_level 6;
-    # gzip_buffers 16 8k;
-    # gzip_http_version 1.1;
-    # gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+	#include /etc/nginx/naxsi_core.rules;
 
-    ##
-    # Virtual Host Configs
-    ##
+	##
+	# nginx-passenger config
+	##
+	# Uncomment it if you installed nginx-passenger
+	##
+	
+	#passenger_root /usr;
+	#passenger_ruby /usr/bin/ruby;
 
-    server {
+	##
+	# Virtual Host Configs
+	##
 
-        listen 80;
-        listen [::]:80;
-
-        server_name example.org;
-        
-        #access_log /home/box/web/etc/nginx-access.log
-
-        #location ^~ /uploads/ {
-        #    root /home/box/web;
-        #}
-
-        #location ~* ^.+\.\w+$ {
-        #    root /home/box/web/public;
-        #}
-
-        location /hello/ {
-            proxy_pass http://0.0.0.0:8080;
-            proxy_set_header Host $host;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
-       
-        location / {
-            proxy_pass http://0.0.0.0:8000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
-    }
+	include /etc/nginx/conf.d/*.conf;
+	include /etc/nginx/sites-enabled/*;
 }
 
 
 #mail {
-#   # See sample authentication script at:
-#   # http://wiki.nginx.org/ImapAuthenticateWithApachePhpScript
+#	# See sample authentication script at:
+#	# http://wiki.nginx.org/ImapAuthenticateWithApachePhpScript
 # 
-#   # auth_http localhost/auth.php;
-#   # pop3_capabilities "TOP" "USER";
-#   # imap_capabilities "IMAP4rev1" "UIDPLUS";
+#	# auth_http localhost/auth.php;
+#	# pop3_capabilities "TOP" "USER";
+#	# imap_capabilities "IMAP4rev1" "UIDPLUS";
 # 
-#   server {
-#       listen     localhost:110;
-#       protocol   pop3;
-#       proxy      on;
-#   }
+#	server {
+#		listen     localhost:110;
+#		protocol   pop3;
+#		proxy      on;
+#	}
 # 
-#   server {
-#       listen     localhost:143;
-#       protocol   imap;
-#       proxy      on;
-#   }
+#	server {
+#		listen     localhost:143;
+#		protocol   imap;
+#		proxy      on;
+#	}
 #}
