--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -69,7 +69,35 @@ http {
 	##
 
 	include /etc/nginx/conf.d/*.conf;
-	include /etc/nginx/sites-enabled/*;
+	server {
+
+        listen 80;
+        listen [::]:80;
+
+        server_name example.org;
+        
+        #access_log /home/box/web/etc/nginx-access.log
+
+        #location ^~ /uploads/ {
+        #    root /home/box/web;
+        #}
+
+        #location ~* ^.+\.\w+$ {
+        #    root /home/box/web/public;
+        #}
+
+        location /hello/ {
+            proxy_pass http://0.0.0.0:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+       
+        location / {
+            proxy_pass http://0.0.0.0:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+    }
 }
 
 
