--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,4 +1,16 @@
-server {
+user www-data;
+
+worker_processes 4;
+
+pid /run/nginx.pid;
+
+events {
+    worker_connections 768;
+}
+
+http{
+
+    server {
 
         listen 80;
         listen [::]:80;
@@ -26,4 +38,5 @@ server {
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
+    }
 }
