--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -34,9 +34,12 @@ http{
         }
        
         location / {
-            proxy_pass http://0.0.0.0:8000;
+            proxy_pass http://127.0.0.1:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
+#        location / {
+#                return 200 'gangnam style!'; 
+#                add_header Content-Type text/plain;
+        } 
     }
-}
+} 
